--- a/gb/20/6/26/n12214771.md
+++ b/gb/20/6/26/n12214771.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mlnbcn2370/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mlnbcn2370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mlnbcn2370/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mlnbcn2370/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mlnbcn2370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>前世界拳王杜兰感染中共病毒 住院治疗</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-594349598-600x400.jpg" />
 <h6>巴拿马世界拳王罗伯托·杜兰（Roberto Duran）感染中共病毒，周四（6月25日）入院治疗。资料图。(Photo by Jason Kempin/Getty Images for The Weinstein Company)
 </h6>
 <hr>
-	<p>【大纪元2020年06月27日讯】（大纪元记者夏雨综合报导）巴拿马世界<ahref="https://github.com/mlnbcn2370/djy/blob/master/gb/tag/%E6%8B%B3%E7%8E%8B.md#1">拳王</a>罗伯托·<ahref="https://github.com/mlnbcn2370/djy/blob/master/gb/tag/%E6%9D%9C%E5%85%B0.md#1">杜兰</a>（Roberto Duran）感染<ahref="https://github.com/mlnbcn2370/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>，周四（6月25日）入院治疗。杜兰的儿子在社交媒体Instagram发帖证实了这个消息。杜兰曾多次获得拳击世界冠军。</p>
-<p><ahref="https://github.com/mlnbcn2370/djy/blob/master/gb/tag/%E6%9D%9C%E5%85%B0.md#1">杜兰</a>是巴拿马人，曾在四个不同的重量级别上赢得世界冠军。他拥有“石头之手”（Hands of Stone）称号，并在1980年6月，成为击败舒格·雷·伦纳德（Sugar Ray Leonard）的第一人，这为他赢得了WBC次中量级冠军。</p>
+	<p>【大纪元2020年06月27日讯】（大纪元记者夏雨综合报导）巴拿马世界<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%8B%B3%E7%8E%8B.md#1">拳王</a>罗伯托·<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%9D%9C%E5%85%B0.md#1">杜兰</a>（Roberto Duran）感染<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>，周四（6月25日）入院治疗。杜兰的儿子在社交媒体Instagram发帖证实了这个消息。杜兰曾多次获得拳击世界冠军。</p>
+<p><ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%9D%9C%E5%85%B0.md#1">杜兰</a>是巴拿马人，曾在四个不同的重量级别上赢得世界冠军。他拥有“石头之手”（Hands of Stone）称号，并在1980年6月，成为击败舒格·雷·伦纳德（Sugar Ray Leonard）的第一人，这为他赢得了WBC次中量级冠军。</p>
 <p>据杜兰的儿子罗宾（Robin Duran）说，杜兰现年69岁，他对COVID-19的测试呈阳性。罗宾说，父亲除了轻度感冒症状以外没有其它症状，他正在医院接受观察。</p>
 <p>罗宾在他的Instagram帖子中用西班牙语写道，这名拳击手于2001年退休，职业生涯成绩为103-16，他不在重症监护室，也不需要呼吸器。</p>
 <p>罗宾还透露，由于2001年在阿根廷发生的一次事故，他的父亲罹患肺部疾病，由于这种伤害，不能掉以轻心。</p>
@@ -22,36 +22,40 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/25/n12210649.md#1">【最新疫情6·25】墨西哥财长感染中共病毒</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/25/n12211616.md#1">纽约等三州对疫情热点州旅客实施14天隔离</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/25/n12212461.md#1">美国CDC估计至少二千万美国人染疫</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/26/n12214643.md#1">英批准华为芯片研究机构申请 美发警告回应</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/6/25/n12210649.md#1">【最新疫情6·25】墨西哥财长感染中共病毒</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/6/25/n12211616.md#1">纽约等三州对疫情热点州旅客实施14天隔离</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/6/25/n12212461.md#1">美国CDC估计至少二千万美国人染疫</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/5/n13752806.md#1">美韩军演后 朝鲜发射8枚短程弹道导弹</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/mlnbcn2370/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/18/n11052730.md#1" target="_blank">王友群：按邓小平的说法 中共早该下台了</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/25/n12211217.md#1">【现场视频】湖北680座水库超汛限 房屋被淹</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/24/n12210247.md#1">制裁将临？美公布20家中共军方所控中企</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/25/n12211676.md#1">端午节北京下冰雹 形状酷似中共病毒</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/24/n12210179.md#1">洪水考验三峡大坝 六亿人头顶“定时炸弹”？</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/24/n12210002.md#1">【新闻看点】强降雨凶险大 三峡到承压极限？</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/24/n12210389.md#1">李英爱晒9岁龙凤胎近照 厨艺获网友夸赞</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/23/n12207595.md#1">爆半年前秘产龙凤胎 唐嫣产后首度公布复工照</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/24/n12210154.md#1">术后袁惟仁52岁生日 儿子隔空祝寿惹人洒泪</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/25/n12212204.md#1">周星驰对赌失败 抵押11亿豪宅周转资金</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/24/n12209963.md#1">“火箭少女”解散 杨超越火速修改微博认证</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/14/n12183964.md#1">【文史】古籍中多姿多彩的端午节粽</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/5/23/n12131668.md#1">【康熙大帝】鳌拜犯上 君臣交锋</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/21/n12201926.md#1">十家端午诗词情致缤纷  说风俗照丹心鉴帝心</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/23/n12207271.md#1">李解元本是横死命 十金救人福寿皆改</a></li>
-<li><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/24/n12209159.md#1">端午：纯阳正气辟阴邪</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750400.md#1">这类人压力大却最长寿！3招抗压 远离衰老疾病</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mlnbcn2370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mlnbcn2370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/26/n12214771.htm">前世界拳王杜兰感染中共病毒 住院治疗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/26/n12214771.htm">前世界拳王杜兰感染中共病毒 住院治疗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mlnbcn2370/djy/blob/master/gb/20/6/26/n12214771.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mlnbcn2370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mlnbcn2370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mlnbcn2370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlnbcn2370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/20/6/26/n12214771.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
